<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#111111">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_title"
            android:textColor="#FFD700"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"/>

        <!-- NAME -->

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="#FFD700">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- MOBILE -->

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/mobile_number"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="#FFD700">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editMobile"
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- CONFIRM MOBILE -->

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/confirm_mobile"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="#FFD700">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editConfirmMobile"
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- EMAIL -->

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/gmail_address"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="#FFD700">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editEmail"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- GENDER -->

        <RadioGroup
            android:id="@+id/genderGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <RadioButton
                android:id="@+id/radioMale"
                android:text="@string/male"
                android:textColor="#FFFFFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/radioFemale"
                android:text="@string/female"
                android:textColor="#FFFFFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/radioOther"
                android:text="@string/other"
                android:textColor="#FFFFFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RadioGroup>

        <!-- PASSWORD -->

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            app:boxBackgroundMode="outline"
            app:endIconMode="password_toggle"
            app:boxStrokeColor="#FFD700">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editPassword"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- CONFIRM PASSWORD -->

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/confirm_password"
            app:boxBackgroundMode="outline"
            app:endIconMode="password_toggle"
            app:boxStrokeColor="#FFD700">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editConfirmPassword"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- REGISTER BUTTON -->

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textStyle="bold"
            android:textColor="#000000"
            android:backgroundTint="#FFD700"
            android:layout_marginTop="28dp"/>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/btnGoogle"

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:layout_gravity="center"

            android:layout_marginTop="20dp"/>

    </LinearLayout>

</ScrollView>